# django-prose

./: .editorconfig  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Pipfile  Procfile  README.md  docker-compose.yml  package.json  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi.yml  release.yml
app/app/: settings.py  urls.py
example/blog/: admin.py  models.py  tests.py  views.py
example/blog/migrations/: 0001_initial.py  0002_article_excerpt.py  0003_rename_content_article_body.py  0004_alter_article_excerpt.py  0005_alter_article_excerpt_comment.py
example/blog/templates/blog/: article.html  base.html  index.html
example/example/: settings.py  urls.py  wsgi.py
prose/: admin.py  apps.py  fields.py  models.py  tests.py  urls.py  views.py  widgets.py
prose/migrations/: 0001_initial.py  0002_alter_document_id.py  0002_auto_20190104_0934.py
prose/static/prose/: editor.css  editor.js
prose/templates/prose/forms/widgets/: editor.html
prose_example/: manage.py
prose_example/blog/: admin.py  models.py
prose_example/blog/migrations/: 0001_initial.py
prose_example/prose_example/: settings.py  urls.py  wsgi.py
