[tool.poetry]
name = "django-prose"
version = "1.2.0"
description = "Wonderful rich text for Django"
authors = ["Paris Kasidiaris <paris@withlogic.co>"]
license = "MIT"
repository = "https://github.com/parisk/django-prose"
readme = "README.md"
packages = [
    { include = "prose" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2"
bleach = ">=4.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
