[tool.poetry]
name = "django-prose"
version = "2.0.1"
description = "Wonderful rich text-editing for Django"
authors = ["Paris Kasidiaris <paris@withlogic.co>"]
license = "MIT"
repository = "https://github.com/withlogicco/django-prose"
readme = "README.md"
packages = [{ include = "prose" }]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2"
bleach = ">=4.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
